uploading v1.61 - added some pics for gallery and squashed smore bugs

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -309,7 +309,7 @@ ul{
 }
 
 .gallery_wrapper{
-	margin-top: 2%;
+	margin-top: 5%;
 }
 
 #modal-container {
